--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,20 +3,25 @@
     package="com.icg.training">
 
     <application
-        android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Training">
-        <activity android:name=".FragmentSampleActivity"></activity>
-        <activity android:name=".AuthActivity">
+        <activity
+            android:name=".ui.BottomNavigationActivity"
+            android:label="@string/title_activity_bottom_navigation"></activity>
+        <activity android:name=".BottomNavigationActivity" />
+        <activity android:name=".PracticeNavigationActivity" />
+        <activity android:name=".AuthNavigationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".FragmentSampleActivity" />
+        <activity android:name=".AuthActivity" />
         <activity
             android:name=".MainActivity"
             android:label="@string/app_name"
