--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,19 +8,22 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.Training">
-        <activity android:name=".ViewPager2SliderActivity"></activity>
+        <activity android:name=".TabsWithViewPager2Actvitiy"></activity>
+        <activity android:name=".ViewPager2SliderActivity" />
         <activity android:name=".TabsActivity">
+
+        </activity>
+        <activity
+            android:name=".ui.BottomNavigationActivity"
+            android:label="@string/title_activity_bottom_navigation" />
+        <activity android:name=".PracticeNavigationActivity" />
+        <activity android:name=".AuthNavigationActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".ui.BottomNavigationActivity"
-            android:label="@string/title_activity_bottom_navigation" />
-        <activity android:name=".PracticeNavigationActivity" />
-        <activity android:name=".AuthNavigationActivity"></activity>
         <activity android:name=".FragmentSampleActivity" />
         <activity android:name=".AuthActivity" />
         <activity
