--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,16 +15,22 @@
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.SEND_SMS" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.CAMERA" />
 
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
+        android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.Training">
-        <activity android:name=".ImageActvitiy"></activity>
+        android:theme="@style/Theme.Training"
+        android:usesCleartextTraffic="true"
+        tools:targetApi="m">
+        <activity android:name=".PostDetailActivity"></activity>
+        <activity android:name=".PhotosActivity" />
+        <activity android:name=".PostsActivity" />
+        <activity android:name=".ImageActvitiy" />
         <activity android:name=".AutoCompletePlacesActivity" />
         <!--
              The API key for Google Maps-based APIs is defined as a string resource.
@@ -37,6 +43,7 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
+
         <provider
             android:name="androidx.core.content.FileProvider"
             android:authorities="${applicationId}.provider"
@@ -46,6 +53,7 @@
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/provider_paths" />
         </provider>
+
         <activity
             android:name=".MapsActivity"
             android:label="@string/title_activity_maps" />
