--- a/app/build.gradle
+++ b/app/build.gradle
@@ -70,7 +70,14 @@ dependencies {
 
     implementation 'com.squareup.picasso:picasso:2.71828'
 
-// Moshi
-    implementation "com.squareup.moshi:moshi:1.8.0"
-    annotationProcessor("com.squareup.moshi:moshi-kotlin-codegen:1.11.0")
+    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
+    implementation 'com.squareup.okhttp3:okhttp:4.7.2'
+    implementation 'com.squareup.okhttp3:logging-interceptor:4.7.2'
+
+    implementation 'com.squareup.moshi:moshi:1.9.2'
+    implementation 'com.squareup.moshi:moshi-kotlin:1.9.2'
+    implementation 'com.squareup.retrofit2:converter-moshi:2.9.0'
+
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:1.5.0"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:1.5.0"
 }
